--- a/Personal_Portfolio/Personal_Portfolio/index.html
+++ b/Personal_Portfolio/Personal_Portfolio/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="welcome-section">
       <h1>Hi, I am Raquel Gomes</h1>
-      <h2 id="redtext"><i>a computer scientist</i></h2>
+      <h2 id="greentext"><i>a computer scientist</i></h2>
     </div>
 
     <header>
